<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="toolbarPersonRegistrationTitle" type="String" />
        <variable name="personRegistrationFragment" type="com.marazanil.personsapplication.ui.fragment.PersonRegistrationFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.fragment.PersonRegistrationFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarPersonRegistration"
            app:title="@{toolbarPersonRegistrationTitle}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:hint="@string/personNameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarPersonRegistration" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personPhoneNumber"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/personPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personName" />

        <Button
            android:id="@+id/personSaveBtn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="#389828"
            android:text="@string/personSaveBtnText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personPhoneNumber"
            android:onClick="@{() -> personRegistrationFragment.personSaveBtn(personName.getText().toString(), personPhoneNumber.getText().toString())}" />


        <Button
            android:id="@+id/backButtonAtRegistration"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="130dp"
            android:backgroundTint="#3F51B5"
            android:text="@string/backButtonAtRegistrationText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personSaveBtn"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>